* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - mms: non-blocking I/O
  - nfs: new input plugin
  - smbclient: new input plugin
* filter
  - volume: improved software volume dithering
* decoder:
  - vorbis, flac, opus: honor DESCRIPTION= tag in Xiph-based files as a comment to the song
  - audiofile: support scanning remote files
* encoder:
  - shine: new encoder plugin
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* configuration
  - allow playlist directory without music directory
  - use XDG to auto-detect "music_directory" and "db_file"
* new resampler option using libsoxr
* ARM NEON optimizations
* install systemd unit for socket activation
* Android port

ver 0.18.12 (not yet released)
* database
  - proxy: fix build failure with libmpdclient 2.2
  - proxy: fix add/search and other commands with libmpdclient < 2.9
* decoder
  - audiofile: improve responsiveness
  - audiofile: fix WAV stream playback
  - dsdiff, dsf: fix stream playback

ver 0.18.11 (2014/05/12)
* decoder
  - opus: fix missing song length on high-latency files
* fix race condition when using GLib event loop (non-Linux)

ver 0.18.10 (2014/04/10)
* decoder
  - ffmpeg: fix seeking bug
  - ffmpeg: handle unknown stream start time
  - gme: fix memory leak
  - sndfile: work around libsndfile bug on partial read
* don't interrupt playback when current song gets deleted

ver 0.18.9 (2014/03/02)
* protocol
  - "findadd" requires the "add" permission
* output
  - alsa: improved workaround for noise after manual song change
* decoder
  - vorbis: fix linker failure when libvorbis/libogg are static
* encoder
  - vorbis: fix another linker failure
* output
  - pipe: fix hanging child process due to blocked signals
* fix build failure due to missing signal.h include

ver 0.18.8 (2014/02/07)
* decoder