@@ -31,6 +31,7 @@ ver 0.19 (not yet released)
 * decoder:
   - vorbis, flac, opus: honor DESCRIPTION= tag in Xiph-based files as a comment to the song
   - audiofile: support scanning remote files
+  - audiofile: log libaudiofile errors
 * encoder:
   - shine: new encoder plugin
 * threads:
